[workspace]
members = [
    "crates/snos-core",
    "crates/rpc-client",
    "crates/starknet-os-types",
    "crates/rpc-replay"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# building on top of the commit: 27e6e36d4f4a35341635a571f36317582d4b00d0 on the main sequencer repo
# the above commit belongs to the 0.15.0-rc4 tag as well
# https://github.com/starkware-libs/sequencer
# commit below is for the sequencer having l3 support and also the snos related support (for snos it's mainly the params being public tho)
#blockifier = { git = "https://github.com/karnotxyz/sequencer", rev="8a9e6d78e344be3e07577230cebfc99b18c87f9b", features = ["testing"]}
#starknet_api = { git = "https://github.com/karnotxyz/sequencer", rev="8a9e6d78e344be3e07577230cebfc99b18c87f9b", features = ["testing"]}
#starknet_os = { git = "https://github.com/karnotxyz/sequencer", rev="8a9e6d78e344be3e07577230cebfc99b18c87f9b", features = ["testing"]}
#starknet_patricia = { git = "https://github.com/karnotxyz/sequencer", rev="8a9e6d78e344be3e07577230cebfc99b18c87f9b", features = ["testing"]}
#shared_execution_objects = { git = "https://github.com/karnotxyz/sequencer", rev="8a9e6d78e344be3e07577230cebfc99b18c87f9b"}

blockifier = { path = "/Users/mohit/Desktop/karnot/sequencer/crates/blockifier", features = ["testing"]}
starknet_api = { path = "/Users/mohit/Desktop/karnot/sequencer/crates/starknet_api", features = ["testing"]}
starknet_os = { path = "/Users/mohit/Desktop/karnot/sequencer/crates/starknet_os", features = ["testing"]}
starknet_patricia = { path = "/Users/mohit/Desktop/karnot/sequencer/crates/starknet_patricia", features = ["testing"]}
shared_execution_objects = { path = "/Users/mohit/Desktop/karnot/sequencer/crates/shared_execution_objects"}

cairo-lang-starknet = { version = "=2.12.0-dev.1" }
cairo-lang-starknet-classes = { version = "=2.12.0-dev.1" }
cairo-lang-utils = { version = "=2.12.0-dev.1" }
cairo-lang-casm = { version = "=2.12.0-dev.1" }
cairo-vm = "=2.3.1"
starknet = "0.16.0"
starknet-types-core = "0.1.5"

log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["arbitrary_precision"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
thiserror = "1.0.48"
flate2 = "1.0.32"
num-bigint = "0.4"
once_cell = "1.20.0"
# on top of 0.19.0 release, because blockfifier is compatible there only
pathfinder-class-hash = {git = "https://github.com/eqlabs/pathfinder", rev = "f205768f0ca4b6adcdce338e6f95ee9acb80b734", package = "pathfinder-class-hash"}
serde_with = "3.3.0"
starknet-core = "0.15.0"
starknet-crypto = "0.7.0"
indoc = "2"
rstest = "0.18.2"
env_logger = "0.11.6"


snos-core = { path = "crates/snos-core" }
rpc-client = { path = "crates/rpc-client" }
starknet-os-types = { path = "crates/starknet-os-types" }

