[package]
name = "snos-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snos-poc"
path = "src/main.rs"

[dependencies]
# Internal dependencies
rpc-client = { path = "../rpc-client" }
starknet-os-types = { path = "../starknet-os-types" }

# Core dependencies
blockifier = {workspace = true}
starknet_api = {workspace = true}
starknet_os = {workspace = true}
starknet_patricia = { workspace = true }
shared_execution_objects = {workspace = true}

cairo-lang-starknet = {workspace = true}
cairo-lang-starknet-classes = {workspace = true}
cairo-lang-utils = {workspace = true}
cairo-lang-casm = {workspace = true}
cairo-vm = {workspace = true}
starknet = {workspace = true}
starknet-types-core = {workspace = true}
starknet-crypto = {workspace = true}
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["arbitrary_precision"] }
thiserror = "1.0.48"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
env_logger = {workspace = true}
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rstest = "0.18.2" 